Fixed the avatar not showing on preview / share components and the ability to remove shared post when sharing

--- a/code/new/academically-admin/src/shared/components/preview/services/services.component.scss
+++ b/code/new/academically-admin/src/shared/components/preview/services/services.component.scss
@@ -3,6 +3,7 @@
     border-radius: 10px;
     overflow: hidden;
     margin-top: 10px;
+    position: relative;
 
     &-remove {
         position: absolute;
